# ros2_for_beginners

./: .gitignore
src/led_battery_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: arm_gazebo_bridge.yaml  gazebo_bridge.yaml  gazebo_launch.yaml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml  robot_news.launch.py  robot_news.launch.xml
src/my_robot_bringup/worlds/: test_world.sdf
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/rviz/: my_robot_arm_config.rviz  my_robot_config.rviz
src/my_robot_description/urdf/: arm.xacro  camera.xacro  common_properties.xacro  (+3 more)
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/launch/: turtlesim_catch_them_all.launch.xml
src/turtlesim_catch_them_all/src/: running_turtle_controller.cpp  turtle_controller.cpp  turtle_spawner.cpp
(+3 files in other folders)
